# mlx-audio

./: .gitignore  README.md  README_CN.md  pyproject.toml
docs/: 公众号文章-MLX-Audio.md
mlx_audio/: config.py
mlx_audio/api/: __init__.py  app.py  app.py.bak
mlx_audio/api/static/: index.html  index.html.bak  stream-player.js
mlx_audio/mcp/: __init__.py  server.py
mlx_audio/models/: memory_manager.py
mlx_audio/stt/models/whisper/: timing.py
mlx_audio/tts/: utils.py
mlx_audio/tts/models/llama/: llama.py
scripts/: setup.sh  start.sh
tauri-app/: package.json
tauri-app/src/: index.html
tauri-app/src-tauri/: tauri.conf.json
tauri-app/src-tauri/src/: main.rs
