[project]
name = "mlx-audio"
version = "0.3.1"
description = "MLX-Audio: TTS/STT/STS on Apple Silicon with MLX"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Prince Canuma", email = "prince.gdt@gmail.com"}]
requires-python = ">=3.10"

dependencies = [
    "mlx>=0.25.2",
    "numpy>=1.26.4",
    "huggingface_hub>=0.27.0",
    "transformers>=4.49.0,<5.0.0",
    "hf_transfer",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.9",
    "fastmcp>=2.0.0",
    "soundfile>=0.13.1",
    "webrtcvad>=2.0.10",
    "mlx-lm>=0.29.1",
    "scipy>=1.15.3",
    "sounddevice>=0.5.3",
    "pyinstaller>=6.17.0",
]

[project.optional-dependencies]
stt = [
    "tiktoken>=0.9.0",
    "tqdm>=4.67.1",
]
tts = [
    "misaki[en]>=0.8.2",
    "loguru>=0.7.3",
    "num2words>=0.5.14",
    "spacy>=3.8.4",
    "phonemizer-fork>=3.3.2",
    "espeakng-loader>=0.2.4",
    "sentencepiece>=0.2.0",
    "sounddevice>=0.5.1",
    "einops>=0.8.1",
    "tqdm>=4.67.1",
    "pyloudnorm>=0.1.1",
    "omegaconf==2.3.0",
    "einx==0.3.0",
    "dacite>=1.9.2",
    "mistral-common[audio]",
]
sts = [
    "mlx-audio[stt,tts]",
    "mlx-vlm>=0.1.27",
    "fastrtc[vad,stt]",
    "webrtcvad>=2.0.10",
]
all = ["mlx-audio[stt,tts,sts]"]
dev = ["pytest>=7.0.0", "pytest-asyncio>=1.0.0"]

[project.scripts]
mlx-audio = "mlx_audio.api.app:main"
"mlx_audio.convert" = "mlx_audio.convert:main"
"mlx_audio.stt.generate" = "mlx_audio.stt.generate:main"
"mlx_audio.tts.generate" = "mlx_audio.tts.generate:main"
"mlx_audio.server" = "mlx_audio.api.app:main"
"mlx_audio.mcp" = "mlx_audio.mcp.server:main"

[project.urls]
Homepage = "https://github.com/Blaizzy/mlx-audio"
Repository = "https://github.com/Blaizzy/mlx-audio"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mlx_audio"]

[tool.uv]
dev-dependencies = ["pytest>=7.0.0", "pytest-asyncio>=1.0.0"]
